# sci-playground

./: Makefile  README.md  pyproject.toml  python_lightkurve.ipynb  python_lightkurve_yt_example.ipynb
