[tool.poetry]
name = "sci-playground"
version = "0.1.0"
description = ""
authors = ["hsadler <harrysadlermusic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
jupyterlab = "^4.3.4"
lightkurve = "^2.5.0"
numpy = "^2.2.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
